--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <link rel="stylesheet" href="./src/styles/style.css">
+    <link rel="stylesheet" href="https://cdn-uicons.flaticon.com/uicons-regular-straight/css/uicons-regular-straight.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Djebril academy</title>
     <script src="https://cdn.tailwindcss.com"></script>
