--- a/index.html
+++ b/index.html
@@ -15,11 +15,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Djebril academy</title>
     <script src="https://cdn.tailwindcss.com"></script>
-   
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-YESFW62C8L"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-YESFW62C8L");
+    </script>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
-
   </body>
 </html>
