qdded the lotie library

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
 
       gtag("config", "G-YESFW62C8L");
     </script>
+    <script src="https://unpkg.com/@dotlottie/player-component@latest/dist/dotlottie-player.mjs" type="module"></script> 
 
+    <dotlottie-player src="https://lottie.host/b69aafee-20b4-42aa-a555-2587c752ee99/rY36niCcAG.json" background="transparent" speed="1" style="width: 300px; height: 300px;" loop autoplay></dotlottie-player>
   </head>
   <body>
     <div id="root"></div>
